test/corpus/pdxinfo.txt
==================
Pdxinfo (minimal)
==================
name=b360
author=Panic Inc.
bundleID=com.panic.b360
buildNumber=123

---

(document
  (statement
    (name
      (string)))
  (statement
    (author
      (string)))
  (statement
    (bundleID
      (reverse_dns)))
  (statement
    (buildNumber
      (integer))))

==================
Pdxinfo (no-comments)
==================
name=b360
author=Panic Inc.
bundleID=com.panic.b360
buildNumber=123
imagePath=path/to/launcher/assets
launchSoundPath=path/to/launch/sound/file
contentWarning=This game contains mild realistic violence and bloodshed.
contentWarning2=This game contains flashing content that may not be suitable for photosensitive epilepsy.

---
(document
  (statement
    (name
      (string )))
  (statement
    (author
      (string )))
  (statement
    (bundleID
      (reverse_dns )))
  (statement
    (buildNumber
      (integer )))
  (statement
    (imagePath
      (string )))
  (statement
    (launchSoundPath
      (string )))
  (statement
    (contentWarning
      (string )))
  (statement
    (contentWarning2
      (string ))))

==================

==================
Pdxinfo (messy)
==================

# Leading newline...oooo.... and comments.
# Documentation https://sdk.play.date/inside-playdate/#pdxinfo
name=A New with Spaces.
author=A Name With Pünc†uå†iönš.
#
# customKey=customValue
bundleID=com.panic.playdate-newgame
buildNumber=123


---
(document
    (comment)
    (comment)
    (statement
    (name
        (string)))
    (statement
    (author
        (string)))
    (comment)
    (comment)
    (statement
    (bundleID
        (reverse_dns)))
    (statement
    (buildNumber
        (integer))))
